Fix wrapping of RecipeContainer elements

--- a/client/scss/_recipeContainer.scss
+++ b/client/scss/_recipeContainer.scss
@@ -20,10 +20,10 @@
   // // h2 {
   //   // margin: 3px;
   // // }
-  // .recipe-container {
+  .recipe-container {
   //   display: flex;
-  //   flex-wrap: wrap;
-  //   flex-direction: column;
+    flex-wrap: wrap;
+    flex-direction: column;
   //   width: 100%;
   //   overflow-x: scroll;
   //   .recipe-list-entry {
@@ -41,7 +41,7 @@
   //       height: 100px;
   //     }
   //   }
-  // }
+  }
 }
 
 
@@ -84,6 +84,19 @@
 //   .recipe-container-title {
 //     margin: 0 0 0 5%;
 //   }
+}
+
+
+.recipes-liked {
+  .recipe-container {
+    flex-wrap: wrap;
+  }
+}
+
+.recipes-created {
+  .recipe-container {
+    flex-wrap: wrap;
+  }
 }
 
 // .search-results {
